# DirectZ

./: .gitignore  .gitmodules  CMakeLists.test.txt  CMakeLists.txt  Doxyfile  LICENSE  README.md  Tests.cmake  fix_format_security.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: android-aarch64.yml  ios-arm64.yml  linux.yml  macos-arm.yml  macos-x64.yml  push-run-actions.yml  windows.yml
android/cutils/: native_handle.h
android/hardware/: hwvulkan.h
android/system/: graphics.h
android/vndk/: hardware_buffer.h
android/vulkan/: vk_android_native_buffer.h
cmake/: Assimp.cmake  Dependencies.cmake  DirectZConfig.cmake.in  GLSL.cmake  ImGui.cmake  Install.cmake  InstallPaths.cmake  LLVM.cmake  Package.cmake  PlatformDefinitions.cmake  SPIRV.cmake  SwiftShader.cmake  Version.cmake  Vulkan.cmake  dz-targets.cmake  iostreams.cmake  rectpack2D.cmake  stb.cmake  zlib.cmake
cmake/Dependencies/: CMakeLists.txt
cmake/modules/: FindDZ_Vulkan.cmake  FindVulkan.cmake
docs/: _asset_pack_8hpp.html  _asset_pack_8hpp.js  _asset_pack_8hpp_source.html  _buffer_group_8cpp.html  _buffer_group_8cpp.js  _buffer_group_8cpp_source.html  _buffer_group_8hpp.html  _buffer_group_8hpp.js  _buffer_group_8hpp_source.html  _camera_8hpp.html  _camera_8hpp.js  _camera_8hpp_source.html  _color_component_8hpp.html  _color_component_8hpp.js  _color_component_8hpp_source.html  _component_8hpp.html  _component_8hpp.js  _component_8hpp_source.html  _d7_stream_8hpp.html  _d7_stream_8hpp.js  _d7_stream_8hpp_source.html  _direct_registry_8hpp.html  _direct_registry_8hpp.js  _direct_registry_8hpp_source.html  _direct_z_8hpp.html  _direct_z_8hpp.js  _direct_z_8hpp_source.html  _direct_z_8mm.html  _direct_z_8mm.js  _displays_8hpp.html  _displays_8hpp.js  _displays_8hpp_source.html  _draw_list_8hpp.html  _draw_list_8hpp.js  _draw_list_8hpp_source.html  _draw_list_manager_8hpp.html  _draw_list_manager_8hpp.js  _draw_list_manager_8hpp_source.html  _e_c_s_8hpp.html  _e_c_s_8hpp.js  (+510 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+133 more)
editor/: Editor.cmake
editor/src/: CodeEditor.cpp  Entry.cpp  editor-desktop.cpp  editor-lib.cpp
editor/test-lib/: test-lib.cpp
include/: DirectZ.hpp
include/dz/: Arena.hpp  AssetPack.hpp  BlendState.hpp  BufferGroup.hpp  CMake.hpp  Camera.hpp  Compiler.hpp  D7Stream.hpp  DirectRegistry.hpp  Displays.hpp  DrawList.hpp  DrawListManager.hpp  ECS.hpp  EventInterface.hpp  FileHandle.hpp  Framebuffer.hpp  GlobalGUID.hpp  GlobalUID.hpp  ImGuiLayer.hpp  Image.hpp  ImagePack.hpp  KeyValueStream.hpp  Process.hpp  ProgramArgs.hpp  Reflectable.hpp  ReflectedStructView.hpp  Renderer.hpp  Runtime.hpp  Shader.hpp  SharedLibrary.hpp  SharedMemory.hpp  SharedMemoryPtr.hpp  Singleton.hpp  State.hpp  TypeLoader.hpp  Util.hpp  Window.hpp  _GUID_.hpp  function.hpp  math.hpp  (+2 more)
include/dz/ECS/: Camera.hpp  Component.hpp  ECS.hpp  Entity.hpp  GammaCorrection.hpp  HDRI.hpp  Light.hpp  Material.hpp  Mesh.hpp  PhongLighting.hpp  PhysicallyBasedLighting.hpp  Provider.hpp  Scene.hpp  Shape.hpp  SkyBox.hpp  SubMesh.hpp
include/dz/ECS/components/: ColorComponent.hpp  PositionComponent.hpp  RotationComponent.hpp  ScaleComponent.hpp
include/dz/Loaders/: Assimp_Loader.hpp  Mesh_Entity_Loader.hpp  STB_Image_Loader.hpp
include/dz/internal/: memory_buffer.hpp  memory_stream.hpp  vlen.hpp
models/: metal_plane.glb
shaders/: Particle.glsl
src/: ApplicationDelegate.mm  AssetPack.cpp  BufferGroup.cpp  BufferGroup.cpp.hpp  CMake.cpp  Camera.cpp  D7Stream.cpp  DZP.cpp  DZWindow.mm  DirectZ.cpp  DirectZ.mm  Directz.cpp.hpp  Displays.cpp  EventInterface.cpp  FileHandle.cpp  Framebuffer.cpp  Framebuffer.cpp.hpp  GlobalGUID.cpp  GlobalUID.cpp  ImGuiLayer.cpp  Image.cpp  Image.cpp.hpp  ImagePack.cpp  MetalView.mm  Reflectable.cpp  Renderer.cpp  RendererImpl.hpp  Shader.cpp  Shader.cpp.hpp  SharedLibrary.cpp  State.cpp  WINDOWDelegate.mm  WINDOWDelegateImpl.mm  Window.cpp  Window.mm  WindowImpl.hpp  env.cpp  path.cpp  path.mm  runtime.cpp
src/Assimp/: Assimp.hpp
src/Compiler/: Clang.cpp  Clang.hpp
src/ECS/: Camera.cpp  Entity.cpp  HDRI.cpp  Light.cpp  Material.cpp  Mesh.cpp  Scene.cpp  Shape.cpp  SubMesh.cpp
src/ECS/components/: ColorComponent.cpp
src/Loaders/: Assimp_Loader.cpp  Mesh_Entity_Loader.cpp  STB_Image_Loader.cpp
tests/: AST.cpp  AssetStream.cpp  CMake.cpp  D7Stream.cpp  ECS.cpp  ImGui.cpp  LineGrid.cpp  Particle2D.cpp  SO.cpp  ShaderReflect.cpp  SharedMemoryConsumer.cpp  SharedMemoryProducer.cpp  function.cpp
tests/x-platform/: CMakeLists.txt
tests/x-platform/android/: local.properties  settings.gradle
tests/x-platform/android/app/: build.gradle
tests/x-platform/android/app/src/androidTest/java/dev/zeucor/mdirecz/: ExampleInstrumentedTest.kt
tests/x-platform/android/app/src/main/: AndroidManifest.xml
tests/x-platform/android/app/src/main/cpp/: CMakeLists.txt  glue.cpp
tests/x-platform/android/app/src/main/java/dev/zeucor/mdirecz/: MainActivity.kt
tests/x-platform/android/app/src/main/res/values/: strings.xml  themes.xml
tests/x-platform/android/app/src/main/res/values-night/: themes.xml
tests/x-platform/android/app/src/test/java/dev/zeucor/mdirecz/: ExampleUnitTest.kt
tests/x-platform/shaders/: camera.glsl  quad.glsl  quad_pos.comp.glsl  raster.frag.glsl  raster.vert.glsl  window.glsl
tests/x-platform/src/: app-lib.cpp  runtime.cpp
