cmake_minimum_required(VERSION 3.2.1...4.8.8)
include(../Version.cmake)
project(DirectZ-Dependencies VERSION ${DZ_V_MAJ}.${DZ_V_MIN}.${DZ_V_PAT}.${DZ_V_TWE})

# include(../PlatformDefinitions.cmake)
# include(../InstallPaths.cmake)

# include(FetchContent)

# FetchContent_Declare(spirv-cross
#     GIT_REPOSITORY https://github.com/KhronosGroup/SPIRV-Cross.git
#     GIT_TAG main)
# FetchContent_MakeAvailable(spirv-cross)